Senior_Project/src/senior/project/test/server/errors/ServerInvalidWeightException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerInvalidWeightException extends Exception {

  public ServerInvalidWeightException(String msg) {
    super(msg);
  }
}
